# WATTx-0.1.7

./: .gitignore  CLAUDE.md  CMakeLists.txt  DEVELOPMENT_PROGRESS.md  README.md  test_merged_stratum.sh  test_privacy  test_privacy.cpp
contracts/: MergedMiningRewards.sol
contracts/bridge/: AtomicSwap.sol  PrivacyBridge.sol
contracts/mining-game/: .env.example  MINING_GAME.md  hardhat.config.js  package-lock.json  package.json
contracts/mining-game/cache/: solidity-files-cache.json
contracts/mining-game/contracts/: MergedMiningRewardsV2.sol
contracts/mining-game/frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  token-metadata.json
contracts/mining-game/scripts/: add-nft-contract.js  deploy.js
contracts/mining-game/test/: MiningGame.test.js
contracts/privacy/: .env  .env.example  PRIVACY_POOLS.md  bridge-sync-data.json  deployment_sepolia.json  hardhat.config.js  note_sepolia_1769545476865.json  package-lock.json  package.json
contracts/privacy/cache/: solidity-files-cache.json
contracts/privacy/circuits/: build.sh  hasher.circom  merkleTree.circom  withdraw.circom
contracts/privacy/contracts/: Groth16Verifier.sol  IVerifier.sol  MerkleTree.sol  MockVerifier.sol  PrivacyPoolBridge.sol  PrivacyPoolStandalone.sol  StealthAddress.sol
contracts/privacy/contracts_backup/: PrivacyController.sol  PrivacyPool.sol
contracts/privacy/frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js
contracts/privacy/gui/: app.js  config.js  index.html  package.json  server.js  styles.css
contracts/privacy/private-bridge-app/: package.json  server.js
contracts/privacy/scripts/: check-balance.js  deploy-altcoinchain.js  deploy-bridge-only.js  deploy-sepolia.js  deploy.js  deployAltcoinchain.js  deployBridge.js  deploySepolia.js  deployVerifier.js  test-bridge-altcoinchain-robust.js  test-bridge-sepolia-altcoinchain.js  test-cross-chain-sync.js  test-deposit-withdraw.js  (+2 more)
docs/: FCMP_INTEGRATION_PLAN.md  FCMP_RESEARCH.md  MERGED_MINING_SPEC.md  WATTx_Technical_Overview.md
src/: CMakeLists.txt  addresstype.cpp  addresstype.h  chain.h  clientversion.cpp  init.cpp  key_io.cpp  logging.cpp  logging.h  net_processing.cpp  pos.cpp  pos_utxo_tracker.cpp  pos_utxo_tracker.h  pow.cpp  pow.h  protocol.h  validation.cpp  validation.h  x25x_test.cpp
src/anchor/: evm_anchor.cpp  evm_anchor.h  private_swap.cpp  private_swap.h
src/auxpow/: auxpow.cpp  auxpow.h
src/bridge/: bridge_node.cpp  bridge_node.h
src/consensus/: auxpow_validation.cpp  auxpow_validation.h  params.h  randomx_pow.cpp
src/crypto/: CMakeLists.txt  dilithium.cpp  dilithium.h
src/crypto/equihash/: equihash.cpp  equihash.h
src/crypto/sphlib/: sph_types.h  x11.c  x11.h
src/crypto/x25x/: x25x.cpp  x25x.h
src/evmone/: CMakeLists.txt  README.md
src/interfaces/: mining.h
src/kernel/: chainparams.cpp  chainparams.h
src/messaging/: CMakeLists.txt  encryptedmsg.cpp  encryptedmsg.h
src/mining/: CMakeLists.txt
src/node/: blockstorage.cpp  interfaces.cpp  miner.cpp  privacy_provider.cpp  privacy_provider.h  randomx_miner.cpp  randomx_miner.h  x25x_miner.cpp  x25x_miner.h
src/opencl/: gpu_sieve.cpp  gpu_sieve.h  opencl_runtime.cpp  opencl_runtime.h  sieve_kernel.h
src/policy/: policy.h
src/primitives/: block.h
src/privacy/: CMakeLists.txt  confidential.cpp  confidential.h  consensus.cpp  consensus.h  fcmp_consensus.cpp  fcmp_consensus.h  fcmp_tx.cpp  fcmp_tx.h  p2p.cpp  p2p.h  privacy.cpp  privacy.h  ring_signature.cpp  ring_signature.h  stealth.cpp  stealth.h
src/privacy/curvetree/: curve_tree.cpp  curve_tree.h  curvetree_tests.cpp  tree_db.cpp  tree_db.h
src/privacy/ed25519/: ed25519_ops.cpp  ed25519_tests.cpp  ed25519_types.h  pedersen.cpp  pedersen.h
src/privacy/fcmp/: CMakeLists.txt  fcmp_ffi.h  fcmp_ffi_gen.h  fcmp_tests.cpp  fcmp_wrapper.cpp  fcmp_wrapper.h
src/privacy/fcmp/rust/: Cargo.toml  build.rs  cbindgen.toml
src/privacy/fcmp/rust/src/: lib.rs
src/qt/: CMakeLists.txt  addtokenpage.cpp  askpassphrasedialog.cpp  bitcoin.cpp  bitcoin.qrc  bitcoingui.cpp  bitcoingui.h  chatbubblewidget.cpp  chatbubblewidget.h  createcontract.cpp  createcontract.h  evmexportdialog.cpp  evmexportdialog.h  guiutil.cpp  guiutil.h  messagingpage.cpp  messagingpage.h  miningpage.cpp  miningpage.h  navigationbar.cpp  networkselectiondialog.cpp  networkselectiondialog.h  overviewpage.cpp  paymentserver.cpp  qtumversionchecker.cpp  soliditycompiler.cpp  soliditycompiler.h  splashscreen.cpp  stakepage.cpp  transactionrecord.cpp  transactionrecord.h  transactiontablemodel.cpp  transactionview.cpp  walletframe.cpp  walletframe.h  walletview.cpp  walletview.h  wrctoken.cpp  wrctoken.h
src/rpc/: anchor.cpp  blockchain.cpp  contract_util.cpp  eth_rpc.cpp  eth_rpc.h  mempool.cpp  mining.cpp  randomx_mining.cpp  rawtransaction.cpp  register.h  stratum_rpc.cpp  util.cpp  validators.cpp
src/script/: interpreter.cpp  script.h
src/stratum/: merged_stratum.cpp  merged_stratum.h  mining_rewards.cpp  mining_rewards.h  multi_merged_stratum.cpp  multi_merged_stratum.h  parent_chain.cpp  parent_chain.h  parent_chain_base.h  parent_chain_bitcoin.h  parent_chain_equihash.h  parent_chain_ethash.h  parent_chain_kaspa.h  parent_chain_litecoin.h  parent_chain_monero.h  parent_chain_x11.h  stratum_server.cpp  stratum_server.cpp.patch  stratum_server.h
src/test/: CMakeLists.txt  base58_tests.cpp  logging_tests.cpp  privacy_tests.cpp  x25x_tests.cpp
src/trust/: heartbeat_net.cpp  trustscore.cpp  trustscore.h
src/util/: strencodings.h
src/validators/: CMakeLists.txt  delegation.cpp  delegation.h  validatordb.cpp  validatordb.h
src/wallet/: CMakeLists.txt  fcmp_wallet.cpp  fcmp_wallet.h  interfaces.cpp  messaging.cpp  messaging.h  monero_wallet.cpp  monero_wallet.h  privacy_wallet.cpp  privacy_wallet.h  stake.cpp  stealth_wallet.cpp  stealth_wallet.h
test/auxpow/: mock_monero_rpc.py  test_auxpow_mining.sh  test_auxpow_stagenet.sh  wait_and_mine.sh
wattx-pool/: .env.example  package.json  tsconfig.json
wattx-pool/src/: index.ts  types.ts
(+138 files in other folders)
